# cpp-app-template

./: CMakeLists.txt  Dockerfile  README.md  conanfile.py
src/: main.cpp  websockets.cpp
test/: CMakeLists.txt  demo_test.cpp
